Fix light pink using wrong colour code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 
 :root {
 	--c-dark-purple: 32, 1, 66;
-	--c-light-pink: #f8fdff;
+	--c-light-pink: #ede1fa;
 
 	--nav-item-border-radius: 30px;
 }
